--- a/package.json
+++ b/package.json
@@ -30,8 +30,14 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged",
+      // "pre-commit": "lint-staged",
       "commit-msg": "commitlint -e $HUSKY_GIT_PARAMS"
     }
+  },
+  "lint-staged": {
+    "src/**/*.js": [
+      "eslint --ext .js",
+      "git add"
+    ]
   }
 }
